<resources>
    <string name="app_name">Contact Tracker</string>

    <!-- Strings genéricos -->
    <string name="apply">Aplicar</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="minutes">Minutos</string>
    <string name="seconds">Segundos</string>
    <string name="meters">Metros</string>
    <string name="lat">Latitud</string>
    <string name="lng">Longitud</string>
    <string name="hour">Hora</string>
...
    <string name="labelStoppedService">Servicio de localización detenido.</string>
    <string name="locationTrackerTitle">Rastreo de Ubicación</string>
    <string name="labelStartStopTracker">Servicio para rastrear la ubicación</string>

    <!-- Títulos de las Tabs de la opción de menú de rastreo -->
    <string name="tabTracker">Rastreador</string>
    <string name="tabAlarms">Alarmas</string>
    <string name="tabMap">Mapa</string>

    <!-- Fragment de Información del rastreo de ubicación -->
    <string name="labelNoLocations">No hay localizaciones que mostrar.</string>


...
    <string name="history_date_picker_title">Selecciona una fecha</string>
    <string name="showInMap">Visualizar en el mapa</string>
    <string name="locations">localizaciones</string>
    <string name="deleteLocationsText">Se han eliminado %d localizaciones.</string>

    <!-- Alarmas de localización -->
    <string name="locationAlarmsTitle">Alarmas de localización</string>
    <string name="labelActivateAlarm">Programar rastreo automático</string>
    <string name="init">Inicio</string>
    <string name="end">Fin</string>
    <string name="program">Programar</string>
    <string name="noAlarm">No tienes alarmas programadas</string>
    <string name="newAlarm">Nueva alarma programada</string>
    <string name="errorInvalidHours">Las horas especificadas no son válidas</string>
    <string name="errorAlarmCollision">Ya existen alarmas programadas para ese rango de horas</string>
    <string name="labelCurrentAlarm">Alarma pendiente</string>
    <string name="placeholderStart">15:00</string>
    <string name="placeholderEnd">16:00</string>
    <string name="contentDescriptionBtnRemoveAlarm">Eliminar alarma de localización</string>
    <string name="contentDescriptionBtnAddAlarm">Añadir alarma de localización</string>
    <string name="addNewAlarmExplanation">Programa una alarma para iniciar y detener el rastreo de tu ubicación a una hora de inicio y de fin determinadas.</string>

    <!-- Fragment: Configuración del Tracker -->
    <string name="minIntervalHint">Intervalo de tiempo</string>
    <string name="minDisplacementHint">Desplazamiento mínimo</string>
    <string name="minIntervalNumberPickerTitle">Seleccionar intervalo mínimo</string>
...
    </plurals>
    <string name="emptyResultsLabel">Aún no hay resultados. Inicia una nueva comprobación para detectar contactos de riesgo.</string>

    <!-- Fragment: Detalles de un resultado de la comprobación -->
    <string name="riskiestContact">Contacto de mayor riesgo</string>
    <string name="riskPercent">Riesgo</string>
    <string name="startHour">Inicio</string>
    <string name="endHour">Fin</string>
    <string name="exposeTime">T. de exposición</string>
    <string name="meanProximity">Proximidad media</string>
    <string name="riskContacts">Contactos de riesgo</string>
    <string name="numberPositives">Número de positivos</string>
    <string name="meanValues">Valores medios</string>
    <string name="totalMeanRisk">Riesgo</string>
...
