...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInputLayoutStartAutoTracking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/init"
                        app:boxStrokeColor="@color/teal_200"
                        android:layout_marginEnd="8dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtStartAutoTracking"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text='@{du.formatDate(viewModel.starTime, "HH:mm")}'
                            android:editable="false"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInputLayoutEndAutoTracking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/end"
                        app:boxStrokeColor="@color/teal_200"
                        android:layout_marginEnd="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtEndAutoTracking"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text='@{du.formatDate(viewModel.endTime, "HH:mm")}'
                            android:editable="false"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/btnAddLocationAlarm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/addGreen"
                        android:contentDescription="@string/contentDescriptionBtnAddAlarm" />
...
